# Bluestock-Internship-Project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dashboard/charts/: 05_category_inflow_heatmap.html
notebooks/: EDA_Analysis.ipynb  Performance_Analytics.ipynb
reports/: cagr_table.csv  data_dictionary.md  day1_data_quality_summary.md  fund_scorecard.csv  maximum_drawdown.csv  nav_history_summary.csv  sharpe_ratio.csv  sortino_ratio.csv
sql/: queries.sql  schema.sql
src/: amfi_validation.py  data_ingestion.py  data_profile.py  fund_master_analysis.py  live_nav_fetch.py  load_cleaned_data.py  load_to_sqlite.py
src/etl/: clean_investor_transactions.py  clean_nav_history.py  clean_scheme_performance.py  process_all_datasets.py
