[project]
name = "bluestock-mf-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "kaleido>=1.3.0",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
]
